--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@okta/oidc-middleware": "^0.1.3",
+    "@okta/oidc-middleware": "^4.0.0",
     "async": "^2.1.4",
     "aws-sdk": "^2.305.0",
     "basic-auth-connect": "^1.0.0",
@@ -29,7 +29,7 @@
     "faye-redis-sharded": "https://github.com/instructure/faye-redis-sharded-node#4ed567a8a827c1c314d3692f41e2accb74908eb0",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.95.0",
-    "lodash": "^4.17.5",
+    "lodash": "4.17.17",
     "lynx": "^0.2.0",
     "memory-cache": "^0.2.0",
     "moment": "^2.7.0",
@@ -89,6 +89,9 @@
     "webpack-cli": "^3.1.0",
     "whatwg-fetch": "^2.0.2",
     "yargs": "^12.0.1"
+  },
+  "overrides": {
+    "lodash": "4.17.17"
   },
   "jest": {
     "collectCoverageFrom": [
